--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerView-Assignment3</string>
+    <string name="flower_any">One of 16 flower pictures</string>
 </resources>
